<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yapp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Home</string>

    <string-array name="options">
        <item>Todos los Canales</item>
        <item>Espectáculos</item>
        <item>Lo de Hoy</item>
        <item>Horóscopos</item>
        <item>Cines</item>
        <item>Clima</item>
        <item>El Fashionista</item>
    </string-array>

    <string name="title_activity_tab">TabActivity</string>
    <string name="Editar_Canales">Editar Canales</string>
    <string name="Configuracion">Configuración</string>
    <string name="Log_out">Log out</string>
    <string name="Login_Facebook">Inicia con Facebook</string>
    <string name="Login_twitter">Inicia con Twitter</string>
    <string name="no_login">Entrar sin Registro ></string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>