<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="0dip"
    android:orientation="vertical"
    tools:context=".HomeActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:background="@drawable/underline_black"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:padding="8dip"
            android:src="@drawable/ic_unknown" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Juan Perez"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/primary_text_light" />

        <Button
            android:id="@+id/imgFav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_favorite"
            android:text="@string/Log_out" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout1"
        android:layout_below="@+id/LinearLayout2"
        android:divider="@android:color/transparent" >
    </ListView>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnEditChannels"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Editar_Canales" />

        <Button
            android:id="@+id/btnConfig"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Configuracion" />
    </LinearLayout>

</RelativeLayout>